modelmesh-monitoring/base/networkpolicy/monitoring_networkpolicy.yaml
# Defines ingress rules for specific port. These ports are defined by
# the services residing in redhat-ods-monitoring. namespaceSelector
# ensures that traffic from only the desired namespaces is allowed

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: opendatahub-monitoring
spec:
  podSelector: {}
  ingress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP # blackbox
          port: 9115
        - protocol: TCP
          port: 8443
        - protocol: TCP  # prometheus
          port: 9091
        # - protocol: TCP  # alertmanager not needed for ODH
        #   port: 10443
    - from:
        - namespaceSelector:
            matchLabels:
              opendatahub.io/generated-namespace: 'true'
  policyTypes:
    - Ingress
